@@ -7,7 +7,6 @@ import java.util.List;
 public class Baraja {
     private List<Carta> cartas;
 
-
     public Baraja() {
         cartas = new ArrayList<>();
         for(Pinta pinta : Pinta.values()){  //Enum.values() devuelve una lista de Pinta en este caso, en el orden en el que fueron declarados.
@@ -21,18 +20,14 @@ public class Baraja {
     public void barajar(){
         Collections.shuffle(cartas);
     }
+
     public void repartirCarta(Jugador jugador){
-        while(jugador.getMano().size() < 2){
-            jugador.recibirCarta(cartas.getFirst());
-            cartas.remove(cartas.getFirst());
+        while(jugador.getMano().getCartas().size() < 5){
+            jugador.recibirCarta(cartas.get(0));
+            cartas.remove(cartas.get(0));
         }
     }
-    public void repartirCarta(List<Carta> comunitarias){
-        if (comunitarias.size() < 5){
-            comunitarias.add(cartas.getFirst());
-            cartas.remove(cartas.getFirst());
-        }
-    }
+
     public List<Carta> getCartas() {
         return cartas;
     }
